Ticket #2413 fix spacing issue with address fields

--- a/sites/all/themes/picsforpets/css/style.css
+++ b/sites/all/themes/picsforpets/css/style.css
@@ -1212,6 +1212,9 @@ fieldset .form-item {
   color: black;
   font-size: 14px;
 }
+#furtographer-address .form-item {
+  width: 140px;
+}
 
 .form-item-email {
   margin-left: 85px;
