--- a/sites/all/themes/picsforpets/sass/partials/04-defaults/forms/_form-defaults.sass
+++ b/sites/all/themes/picsforpets/sass/partials/04-defaults/forms/_form-defaults.sass
@@ -189,6 +189,8 @@ fieldset
     label
       color: $black
       font-size: 14px
+  .form-item
+    width: 140px
 
 .form-item-email
   margin-left: 85px
